# FootMamba

./: .gitignore  README.md  pyproject.toml  requirements-mamba.txt  requirements.txt
configs/: default.yaml  research.yaml  smoke.yaml
docs/: SCIENTIFIC_REPORT.md
scripts/: 01_cache_statsbomb_data.py  02_build_dataset.py  03_train_model.py  04_evaluate_model.py  05_make_case_study.py  06_run_smoke_test.py
src/: __init__.py
src/data/: __init__.py  build_360_features.py  build_events.py  build_sequences.py  load_statsbomb.py  split.py  vocab.py
src/generation/: __init__.py  constraints.py  rollout.py  summarize_futures.py
src/models/: event_encoder.py  ghost_model.py  gru_baseline.py  heads.py  losses.py  mamba_model.py
src/training/: __init__.py  evaluate.py  metrics.py  train.py
src/utils/: config.py  geometry.py  io.py  logging.py  seed.py  statsbomb_safe.py
src/visualization/: case_study.py  ghost_futures_plot.py  pitch_plot.py
tests/: test_360_features.py  test_model_forward.py  test_rollout_shapes.py  test_safe_extractors.py  test_sequence_shapes.py
